Refactor gradle, jni native libs extraction